# vimcord

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: access_code_received.html  default_config.json
src/: chat_module_frame.cpp  chat_module_frame.hpp  discord_api_handler.cpp  discord_api_handler.hpp  filesystem.cpp  filesystem.hpp  json_helper.cpp  json_helper.hpp  main.cpp  time.cpp  time.hpp
src/http/: http_server.cpp  http_server.hpp
src/platform/: platform.hpp  platform_linux.cpp
